--- a/css/styles.css
+++ b/css/styles.css
@@ -75,14 +75,41 @@ text-align: center;
     text-align: right;
     padding-right: 15px;
 }
+#menu-tile, #specials-tile, #map-tile {
+    border: 2px solid black;
+    width: 100%;
+    height: 250px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 15px;
 
 
+}
+#menu-tile{
+    background: url('../images/menu-tile.jpg') no-repeat;
+    background-position: center;
+}
+#specials-tile{
+    background: url('../images/specials-tile.jpg') no-repeat;
+    background-position: center;
+}
 
-
-
-
-
-
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+    box-shadow: 0 1px 5px 1px white;
+}
+#menu-tile span, #specials-tile span, #map-tile span
+    {
+position: absolute;
+bottom: 0;
+right:0;
+text-align: center;
+font-size: 1.5em;
+text-transform: uppercase;
+opacity: .8;
+background-color: #000;
+color: #fff;
+width:100%;
+    }
 
 
 
