--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,37 @@ background-color: #000;
 color: #fff;
 width:100%;
     }
-
-
-
-
+ 
+.panel-footer{
+    background-color:black;
+   margin-top: 35px;
+   padding-top: 35px;
+   padding-bottom: 30px;
+   border-top: 0;
+   
+}
+.panel-footer div.row {
+    margin-bottom: 35px;
+  }
+  #hours, #address {
+    line-height: 2;
+  }
+  #hours > span, #address > span {
+    font-size: 1.3em;
+  }
+  #address p {
+    color: #557c3e;
+    font-size: .8em;
+    line-height: 1.8;
+  }
+  #testimonials {
+    font-style: italic;
+  }
+  #testimonials p:nth-child(2) {
+    margin-top: 25px;
+  }
+  /* END FOOTER */
+  
 
 
 /********** Large devices only **********/
@@ -203,6 +230,17 @@ width:100%;
               padding: 0px;
               }
     }
+    /* Footer */
+ .panel-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .panel-footer section:nth-child(3) {
+    margin-bottom: 0; /* margin already exists on the whole row */
+  }
+  .panel-footer section hr {
+    width: 50%;
+  }
   /********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
   @media (max-width: 479px) {
    
